Restore z-index to 2000 to fix slide transition
* Doesn't look like this breaks something else.

--- a/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
+++ b/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
@@ -199,7 +199,7 @@ $medium-image-height: 600px;
     &.active {
       display: block;
       left: 0;
-      z-index: 1;
+      z-index: 2000;
       opacity: 1;
       transition: unset;
       pointer-events: all;
